--- a/Kori/GlobalLogin.razor.css
+++ b/Kori/GlobalLogin.razor.css
@@ -1,15 +1,15 @@
 ﻿.login-component {
+  width: fit-content;
+  padding: 12px;
   display: flex;
   flex-direction: row-reverse;
   gap: 16px;
   position: absolute;
   top: 0;
   right: 16px;
-  font-family: Lato;
-  font-weight: 400;
-  line-height: 160%;
+  z-index: 1000;
 }
-.login-component .login-component > * {
+.login-component > * {
   width: 32px;
   height: 32px;
   padding: 0;
@@ -18,188 +18,241 @@
   justify-content: center;
   align-items: center;
 }
-.login-component .login-component > * img {
+.login-component > * img {
   width: 20px;
   height: 20px;
   margin: 0;
 }
-.login-component .login-component .login-component__logged-out {
-  background: var(--grey-900);
+.login-component.show {
+  display: flex;
+  gap: 12px;
 }
-.login-component .login-component .login-component__logged-in {
-  display: none;
-  background: #36A42C;
+.login-component__btn {
+  padding: 8px 0 !important;
+  background: none !important;
+  border: none !important;
+  font-family: "Encode Sans Expanded" !important;
+  font-size: 14px !important;
+  font-weight: 400 !important;
+  line-height: 140% !important;
+  color: white !important;
+  cursor: pointer;
+}
+.login-component .login-component__toggle {
+  width: 24px;
+  height: 24px;
+  background: #1a1a1a !important;
+  border-radius: 50%;
+  cursor: pointer;
+}
+.login-component .login-component__toggle .login-user-icon {
+  width: 36px !important;
+  height: auto !important;
+}
+.login-component .login-component__toggle.loggedout {
+  border: 1px solid var(--grey-50);
   border-radius: 50%;
 }
-.login-component .login-component .login-component__logged-in.show {
+.login-component .login-component__toggle.loggedin {
+  display: none;
+  border: 1px solid var(--green-500);
+  border-radius: 50%;
+}
+.login-component .login-component__toggle.loggedin.show {
   display: block;
 }
 .login-component__menu {
-  width: 200px;
   display: none;
-  animation: login_fadeIn 1000ms linear;
-  z-index: 1000;
+  width: 256px;
+  height: fit-content;
   padding: 16px 16px 0px 16px;
-  background: white;
+  position: absolute;
+  top: 40px;
+  right: 12px;
+  background: var(--grey-900);
+  border: 1px solid var(--grey-700);
+  border-radius: 4px;
+  animation: login_fadeIn 500ms ease-in-out;
+  z-index: 1000;
 }
 .login-component__menu.show {
   display: flex;
   flex-direction: column;
   gap: 16px;
 }
-.login-component__menu li, .login-component__menu button {
-  color: var(--grey-700) !important;
-}
-.login-component__menu button {
-  padding: 16px 20px !important;
-  border: 1px solid var(--grey-200, #DBDBDB) !important;
-  border-radius: 0 !important;
-  border-image: none !important;
-  font-family: Lato;
-  font-weight: 700;
-  line-height: 160%;
-  transition: 300ms ease-in-out;
-}
-.login-component__menu button:hover {
-  background: var(--grey-50);
-}
-.login-component__menu button:active {
-  background: var(--white);
-}
-.login-component__actions {
+.login-component .login-menu__actions {
+  width: 100%;
   display: flex;
   flex-direction: column;
-  gap: 16px !important;
+  gap: 8px;
 }
-.login-component__user {
+.login-component .login-menu__actions .login-menu__divider {
+  width: 100%;
+  border-bottom: 1px solid rgba(255, 255, 255, 0.8);
+}
+.login-component .login-menu__actions button {
+  padding: 6px 8px !important;
+  border-radius: 4px !important;
+}
+.login-component .login-menu__actions button img {
+  width: 16px;
+  height: 16px;
+}
+.login-component .login-menu__actions .login-btn, .login-component .login-menu__actions .account-btn {
+  display: flex !important;
+  gap: 14px !important;
+  align-items: center !important;
+  background: var(--grey-800) !important;
+  transition: 300ms ease-in-out;
+}
+.login-component .login-menu__actions .login-btn:hover, .login-component .login-menu__actions .account-btn:hover {
+  background: var(--grey-700) !important;
+}
+.login-component .login-menu__actions .login-btn:active, .login-component .login-menu__actions .account-btn:active {
+  background: var(--grey-800) !important;
+}
+.login-component .login-menu__actions .login-btn__content, .login-component .login-menu__actions .account-btn__content {
+  text-align: left !important;
+}
+.login-component .login-menu__actions .language-btn {
+  display: flex !important;
+  justify-content: space-between !important;
+  align-items: center !important;
+}
+.login-component .login-menu__actions .language-btn__wrapper {
+  display: flex !important;
+  align-items: center !important;
+  gap: 14px !important;
+  font-family: "Encode Sans Expanded" !important;
+  font-size: 14px !important;
+  font-weight: 400 !important;
+  line-height: 140% !important;
+  color: white !important;
+  opacity: 0.7 !important;
+}
+.login-component .login-menu__actions .language-btn .expand-icon {
+  transition: transform 1000ms ease-in-out;
+  opacity: 0.7;
+}
+.login-component .login-menu__actions .language-btn .expand-icon.rotate {
+  transform: rotate(-180deg);
+}
+.login-component .login-menu__actions .use-passkey {
+  width: 100%;
+}
+.login-component .login-menu__actions .use-passkey button {
   display: flex;
-  justify-content: center;
-  align-items: center;
-  gap: 16px;
+  align-content: center;
+  gap: 12px;
+  padding: 6px !important;
 }
-.login-component__user .login-component__logout-btn {
-  padding: 0 !important;
-  background: none !important;
-  border: none !important;
-  border-radius: 0 !important;
+.login-component .login-menu__actions .different-email {
+  width: 100%;
+  margin: 12px 0;
 }
-.login-component__user .login-component__logout-btn img {
-  width: 20px;
-  height: 20px;
-}
-.login-component__user .login-component__logout-btn:hover {
-  opacity: 0.5;
-}
-.login-component__user .login-component__logout-btn:active {
-  opacity: 1;
-}
-.login-component__btn {
+.login-component .login-menu__actions .different-email span {
   display: flex;
-  gap: 16px;
-}
-.login-component__btn img {
-  width: 10px;
-  height: auto;
-}
-.login-component.show {
-  display: flex;
+  align-content: center;
   gap: 12px;
 }
-.login-component .kori-buddy {
-  width: 88px;
+.login-component .login-menu__actions .different-email button {
+  padding: 0 !important;
 }
-.login-component__container {
-  padding: 12px;
-  background: var(--white);
-  border-radius: 0 0 16px 16px;
+.login-component .login-menu__actions form .form-error {
+  display: none;
 }
-.login-component h5, .login-component input, .login-component label, .login-component button {
-  font-family: "Love Ya Like A Sister" !important;
-  font-size: 14px;
-  color: var(--grey-900);
-  font-weight: 400;
+.login-component .login-menu__actions form .form-error span {
+  margin-top: 8px;
+  color: white;
+  opacity: 0.7;
 }
-.login-component__header {
-  margin-bottom: 12px;
+.login-component .login-menu__actions form .form-error.show {
+  display: block;
 }
-.login-component__input {
-  display: flex;
-  gap: 8px;
-  padding: 0;
-  background: var(--white);
-  border: 10px solid transparent;
-  border-image: url("/_content/Kori/borders/black-16.svg") 15 round;
-}
-.login-component__input input {
-  padding: 0;
-  border: none;
-}
-.login-component__input input::placeholder {
-  color: var(--grey-500);
-}
-.login-component__input input:-ms-input-placeholder {
-  color: var(--grey-500);
-}
-.login-component__keep {
-  display: flex;
-  gap: 8px;
-  font-size: 14px;
-}
-.login-component__keep input {
-  margin-top: 6px;
-  width: 14px;
-  height: 14px;
-  border: 4px solid transparent;
-  border-image: url("/_content/Kori/borders/black-8.svg") 15 round;
-  border-radius: 2px;
-}
-.login-component__keep input::before {
-  background: var(--grey-700);
-  box-shadow: var(--grey-700);
-}
-.login-component__actions {
+.login-component .login-menu__input {
   display: flex;
   flex-direction: column;
   gap: 4px;
-  margin-top: 12px;
 }
-.login-component__actions button {
-  width: 100%;
-  padding: 0;
-  background: none;
-  border: 10px solid transparent;
-  border-image: url("/_content/Kori/borders/black-8.svg") 15 round;
-  font-style: normal;
+.login-component .login-menu__input input {
+  width: 100% !important;
+  height: fit-content !important;
+  padding: 8px 12px !important;
+  background: var(--grey-800) !important;
+  border-radius: 4px !important;
+  border: none !important;
+  color: var(--grey-50);
+  font-family: "Encode Sans Expanded";
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 160%;
 }
-.login-component__actions button.login-component__btn {
-  width: calc(100% - 4px);
-  height: calc(100% - 4px);
-  margin: 0 auto;
-  background: var(--orange-500);
-  border-radius: 8px;
-  border-image-outset: 2px;
+.login-component .login-menu__input input:focus {
+  border: var(--grey-50) !important;
+  backdrop-filter: brightness(120%) !important;
 }
-.login-component__actions button.login-component__btn:hover {
-  background: var(--orange-200) !important;
-  filter: opacity(1) !important;
+.login-component .login-menu__input .submit-btn {
+  width: 100% !important;
+  padding: 8px 12px !important;
+  background: var(--grey-800) !important;
+  font-family: "Encode Sans Expanded";
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 160%;
+  transition: 300ms ease-in-out;
 }
-.login-component__actions button.login-component__btn:active {
-  background: var(--orange-500) !important;
+.login-component .login-menu__input .submit-btn:hover {
+  background: var(--grey-700) !important;
 }
-.login-component__actions button.login-component__cancel:hover {
-  filter: opacity(0.6) !important;
+.login-component .login-menu__input .submit-btn:active {
+  background: var(--grey-800) !important;
 }
-.login-component__actions button.login-component__cancel:active {
-  filter: opacity(1) !important;
+.login-component__overlay.show {
+  width: 100vw;
+  height: 100vh;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 10;
 }
 
 @keyframes login_fadeIn {
   0% {
     opacity: 0;
-    top: -211px;
   }
   100% {
     opacity: 1;
-    top: 0;
   }
+}
+.login-text__primary, .login-component .login-menu__header, .login-component .login-menu__actions .login-btn__content figcaption, .login-component .login-menu__actions .account-btn__content figcaption {
+  font-family: "Encode Sans Semi Expanded" !important;
+  font-size: 16px !important;
+  font-weight: 400 !important;
+  line-height: 160% !important;
+  color: var(--grey-50) !important;
+}
+
+.login-text__secondary, .login-component .login-menu__header p, .login-component .login-menu__actions .login-btn__content aside, .login-component .login-menu__actions .account-btn__content aside {
+  font-family: "Encode Sans Expanded" !important;
+  font-size: 14px !important;
+  font-weight: 400 !important;
+  line-height: 140% !important;
+  color: var(--grey-300) !important;
+}
+
+.login-text__btn, .login-component .login-menu__actions .language-btn {
+  font-family: "Encode Sans Expanded" !important;
+  font-size: 14px !important;
+  font-weight: 400 !important;
+  line-height: 140% !important;
+  color: white !important;
+  cursor: pointer !important;
+  transition: 300ms ease-in-out !important;
+  opacity: 0.7 !important;
+}
+.login-text__btn:hover, .login-component .login-menu__actions .language-btn:hover {
+  opacity: 1 !important;
+}
+.login-text__btn:active, .login-component .login-menu__actions .language-btn:active {
+  opacity: 0.7 !important;
 }
