--- a/Kori/LanguageSelector.razor
+++ b/Kori/LanguageSelector.razor
@@ -2,45 +2,37 @@
 @using System.Globalization
 
 <div class="login-component__language">
-    <div>
-        @if (selectedLanguage != null)
+    <ul class="language-list @(ShowLanguages? "show" : "")">
+        @if (Languages != null)
         {
-            <button class="toggle-languages selected" _="on click toggle .show on .language-list" aria-label="select language">@selectedLanguage.DisplayName</button>
-        }
-        <div class="language-list">
-            <p class="list-header">Select your language:</p>
-            <ul>
-                @if (Languages != null)
-                {
-                    @foreach (var language in Languages)
-                    {
-                        <li>
-                            <button @onclick=@(() => ChangeLanguage(language))>
-                                @language.DisplayName
+            @foreach (var language in Languages)
+            {
+                <li>
+                    <button class="login-text__btn" @onclick=@(() => ChangeLanguage(language))>
+                        @language.DisplayName
 
-                                @if (language.DisplayName != language.NativeName)
-                                {
-                                    <aside>@language.NativeName</aside>
-                                }
-
-                                @* @if (User.Language == language.Id)
+                        @if (language.DisplayName != language.NativeName)
                         {
-                        <div class="right">
-                        <img src="icons/Check.svg" />
-                        </div>
+                            <aside>@language.NativeName</aside>
                         }
-                        *@
-                            </button>
-                        </li>
-                    }
+
+                        @* @if (User.Language == language.Id)
+                {
+                <div class="right">
+                <img src="icons/Check.svg" />
+                </div>
                 }
-            </ul>
-        </div>
-    </div>
+                *@
+                    </button>
+                </li>
+            }
+        }
+    </ul>
 </div> 
 
 @code {
     [Parameter] public EventCallback<Language> LanguageChanged { get; set; }
+    [Parameter] public bool ShowLanguages { get; set; }
     string? SelectedLanguageId { get; set; }
     Language? selectedLanguage;
     List<Language>? Languages { get; set; }
