--- a/SparcFeatures/Blog/BlogTemplate.razor
+++ b/SparcFeatures/Blog/BlogTemplate.razor
@@ -4,12 +4,12 @@
 
 <article class="blog-post">
     <header>
-        <h1 class="@(IsPlaceholder("Title") ? "placeholder" : "")">
-            @((MarkupString)GetTag("Title"))  
+        <h1 data-tag="Title" class="@(IsPlaceholder("Title") ? "placeholder" : "")">
+            @GetTag("Title")  
         </h1>
 
-        <aside class="@(IsPlaceholder("Author") ? "placeholder" : "")">
-            @((MarkupString)GetTag("Author"))
+        <aside data-tag="Author" class="@(IsPlaceholder("Author") ? "placeholder" : "")">
+            @GetTag("Author")
         </aside>
 
         <time datetime="@(DateTime.Now.ToString("O"))">
@@ -19,12 +19,12 @@
     </header>
 
     <figure>
-        <img src="@GetTag("ImageUrl")" alt="@GetTag("Title")" class="@(IsPlaceholder("ImageUrl") ? "placeholder" : "")" />
+        <img data-tag="ImageUrl" src="@GetTag("ImageUrl")" alt="@GetTag("Title")" class="@(IsPlaceholder("ImageUrl") ? "placeholder" : "")" />
     </figure>
 
     <section class="content">
-        <p class="@(IsPlaceholder("Content") ? "placeholder" : "")">
-            @((MarkupString)GetTag("Content"))
+        <p data-tag="Content" class="@(IsPlaceholder("Content") ? "placeholder" : "")">
+            @GetTag("Content")
         </p>
     </section>
 </article>
@@ -48,15 +48,16 @@
 
         foreach (var key in DefaultValues.Keys)
         {
-
             B[key] = DefaultValues[key];
         }
+
+        JSRuntime.InvokeVoidAsync("initializeDefaultValues", DefaultValues);
     }
 
     private string GetTag(string key)
     {
-        return B[key];
-    }
+        return B[key];        
+    }    
 
     private bool IsPlaceholder(string key)
     {
@@ -74,5 +75,5 @@
             </svg>";
 
         return Convert.ToBase64String(System.Text.Encoding.UTF8.GetBytes(svg));
-    }
+    }    
 }
